# test

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  iac.md  livekit.toml  pyproject.toml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  relaydesk-tfstate-test.json
api/scripts/: bench_search.py  bootstrap_db.py  db_runner.py  init_db.py  init_db.sql  migrate_call_job_results.sql  migrate_db.py  reset_db.py  reset_qdrant_collections.py  seed_db.sql  set_client_business_phone.py  upload_document.py
api/scripts/db/: drop.sql  migrate_call_jobs_legacy_phone.sql  migrate_call_summaries.sql  migrate_client_voice_agent_config.sql  migrate_consumer_call_status.sql  migrate_consumer_campaign.sql  migrate_customer_call_status.sql  migrate_customer_campaign.sql  migrate_customers_to_consumers.sql  migrate_drop_cognito_sub.sql  migrate_drop_knowledge_base_topic.sql  migrate_normalize_consumers.sql  schema.sql  seed.sql  seed_deepak.sql
api/src/app/: __main__.py  main.py
api/src/app/core/: collections.py  config.py  dependencies.py  logging.py  oauth.py  qdrant_errors.py  rbac.py  tenant.py
api/src/app/db/: embedding_cache_repository.py  embedding_provider.py  qdrant_repository.py
api/src/app/domain/: call_summary_models.py  client_models.py  client_voice_agent_config_models.py  consumer_models.py  consumer_status.py  customer_models.py  customer_status.py  models.py  phone_validation.py  voice_agent_defaults.py  voice_agent_schedule_models.py
api/src/app/routers/: call_jobs.py  call_summaries.py  clients.py  collections.py  consumers.py  customers.py  documents.py  embeddings.py  search.py  voice_agent_config.py  voice_agent_schedules.py
api/src/app/schemas/: call_jobs.py  call_summaries.py  client_resolve.py  clients.py  collections.py  consumers.py  customers.py  documents.py  embeddings.py  search.py  voice_agent_config.py  voice_agent_schedules.py
api/src/app/services/: call_job_service.py  call_summary_service.py  client_service.py  client_voice_agent_config_service.py  cognito_admin_service.py  (+12 more)
api/tests/: conftest.py  test_api.py  test_call_schedule_outcome.py  test_call_summaries.py  test_client_resolve.py  test_clients_admin.py  test_consumers.py  test_customers.py  test_dev_bypass.py  test_oauth.py  test_phone_validation.py  test_rbac.py  test_tenant.py  test_voice_agent_config.py  test_voice_agent_schedule_time.py  test_voice_agent_schedules.py
voice-agent/: .dockerignore  .env.example  README.md  livekit.toml  pyproject.toml
voice-agent/config/: phone_number_6789.json  phone_number_911171366880.json
voice-agent/scripts/: verify_calcom.py
voice-agent/src/: agent.py  agent_instructions.py  agent_realtime.py  calcom_client.py  call_summary_builder.py  call_summary_llm.py  client_config.py  client_email_resolver.py  meeting_scheduler.py  paths.py  scheduling_tools.py  session_greeting.py  tts_config.py  turn_handling_config.py  voice_agent_config_client.py
voice-agent/src/rag_client/: __init__.py  api_retriever.py  call_summary_client.py  config.py  models.py  oauth_token.py  prefetch.py  tools.py
voice-agent/tests/: test_agent_call_summary.py  test_agent_instructions.py  test_calcom_client.py  test_call_schedule_outcome.py  test_call_summary.py  test_call_summary_llm.py  test_client_config.py  test_client_email_resolver.py  test_rag_api_client.py  test_rag_prefetch.py  test_rag_tools.py  test_scheduling_tools.py  test_session_greeting.py  test_tts_config.py  test_turn_handling.py
(+207 files in other folders)
