[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telephone-api"
version = "2.0.0"
description = "Layered FastAPI service for RAG embeddings, documents, and search"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "pypdf>=5.0.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.12",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "fpdf2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".venv", "vendor", "node_modules"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "W291", "RUF001", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
