[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaydesk-api"
version = "2.0.0"
description = "RelayDesk API — RAG, documents, consumers, and call jobs"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "pypdf>=5.0.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.12",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "livekit-api>=1.0",
    "PyJWT[crypto]>=2.10",
    "boto3>=1.35",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "fpdf2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".venv", "vendor", "node_modules"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "W291", "RUF001", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
