[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaydesk-voice-agent"
version = "1.0.0"
description = "RelayDesk LiveKit voice agent with scheduling and RAG client"
requires-python = ">=3.10"

dependencies = [
    "livekit-agents[silero,turn-detector,xai]~=1.5",
    "livekit-plugins-ai-coustics~=0.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-deepgram~=1.5",
    "livekit-plugins-cartesia~=1.5",
    "python-dotenv",
    "python-handlebars",
    "tzdata>=2024.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "W291", "RUF001", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
